fixed the ham-menu js,styled it, fixed the logo andspacing on mobile, need to look at trap for ham menu and accessibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,22 +23,107 @@
    justify-content: space-between;
  }
 
+ .logo-container {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   margin-left: 30px;
+   font-size: 16px;
+   color: #174143;
+ }
+
+ .logo-container a {
+   display: flex;
+   align-items: flex-end;
+ }
+
+ .logo {
+   margin: 0 10px 0 0;
+   position: relative;
+   top: 5px;
+ }
+
  .nav-mobile {
-   align-self: center;
-   margin-right: 15px;
+   display: flex;
+   justify-content: flex-end;
+   align-items: center;
+   color: #174143;
+   padding: 0.8rem 1.5rem;
+   width: 50%;
+ }
+
+ .nav-mobile p {
+   margin: 2px;
+   font-size: 16px;
+   color: #174143
  }
 
  .hamburger {
-   background-color: #F5E5E1;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   cursor: pointer;
+   position: relative;
+   z-index: 2000;
    border: 1px solid #174143;
    border-radius: 6px;
    padding: 7px;
+   background-color: #F5E5E1;
+   color: #174143;
  }
 
- .nav-mobile ul {
-   background: #F5E5E1;
-   width: 100%;
+ .hamburger span {
+   display: block;
+   height: 4px;
+   width: 40px;
+   background: #174143;
+   margin: 4px 0;
+   border-radius: 2px;
+   transition: transform 0.4s ease, opacity 0.3s ease;
+ }
 
+ .hamburger.active span:nth-child(2) {
+   transform: translateY(12px) rotate(45deg);
+ }
+
+ .hamburger.active span:nth-child(3) {
+   opacity: 0;
+ }
+
+ .hamburger.active span:nth-child(4) {
+   transform: translateY(-12px) rotate(-45deg);
+ }
+
+ .ham-menu-list {
+   list-style: none;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   position: absolute;
+   top: 50px;
+   left: 0;
+   right: 0;
+   width: 100%;
+   height: 400px;
+   margin: 0;
+   background: #F5E5E1;
+   z-index: 1000;
+
+   max-height: 0;
+   overflow: hidden;
+   opacity: 0;
+   transform: translateY(-20px);
+   transition: all 0, 4s ease-in-out;
+   pointer-events: none;
+ }
+
+ .ham-menu-list.show {
+   max-height: 400px;
+   opacity: 1;
+   top: 80px;
+   transform: translateY(0);
+   pointer-events: none;
+   transition: all 0.4s ease;
  }
 
  .nav-mobile span {
@@ -52,21 +137,29 @@
    height: auto;
  }
 
- #hamMenuList {
-   display: none;
-   opacity: 0;
-   transition: opacity 0.3s ease;
- }
 
- #hamMenuList.show {
-   display: block;
-   opacity: 1;
+ .menu-item {
+   color: #174143;
+   text-decoration: none;
+   font-size: 20px;
+   padding: 0, 5rem 1rem;
+   transition: background-color 0.2s ease, color 0.2s ease;
  }
 
  @media (max-width: 576px) {
    header {
-     height: 12vh;
+     height: 16vh;
      width: 100%;
+   }
+
+   /* .hamburger {
+     top: 15px;
+     right: -5px;
+   } */
+
+   .nav-mobile {
+     margin-right: 18px;
+     padding: 0;
    }
 
    .nav-desktop {
@@ -158,18 +251,6 @@
  }
 
 
- .logo-container {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   margin-left: 30px;
-   font-size: 16px;
-   color: #174143;
- }
-
- .logo {
-   margin: 0 10px 0 0;
- }
 
  ul {
    list-style-type: none;
